--- a/accueil.html
+++ b/accueil.html
@@ -27,7 +27,7 @@
         </nav>
         <section class="main-section">
             <div class="intro">
-                <h2>Bienvenue sur Agora Francia</h2>
+                <h2>feur sur Agora Francia</h2>
                 <p>Découvrez notre plateforme de vente en ligne où vous pouvez acheter, négocier, et enchérir sur une variété d'articles.</p>
             </div>
             <div class="selection-du-jour">
