--- a/tout_parcourir.html
+++ b/tout_parcourir.html
@@ -121,10 +121,12 @@
                         <h4>Articles Rares</h4>
                         <div class="articles-row">
                             <div class="article rare">
-                                <a href="meilleure_offre.html"><img src="../Images/Kirby.webp" alt="Article Rare 5"></a>
-                                <p>Article Rare 5</p>
-                                <button onclick="window.location.href='meilleure_offre.html'">Enchérir</button>
+                                    <a href="meilleure_offre.html"><img src="Images/Kirby.webp" alt="Article Rare 1"></a>
+                                    <p>Peluche Kirby Très Rare</p>
+                                    <p>Enchère actuelle : <span id="current-bid-1">200€</span></p>
                             </div>
+                                <!-- Autres articles -->
+                            
                             <div class="article rare">
                                 <img src="rare6.jpg" alt="Article Rare 6">
                                 <p>Article Rare 6</p>
